HLT-2920 - Fix bugs with font weight and also bug with overflow being hidden on payment step. Also fix issue where if a product isnt available on the payment step, you can't continue at all.

--- a/src/main/webapp/bundles/health_v2/less/journeyEngineOverrides.less
+++ b/src/main/webapp/bundles/health_v2/less/journeyEngineOverrides.less
@@ -109,7 +109,8 @@ fieldset > .content,
 	h2 {
 		border-bottom: none;
 		color: @header-color;
-		font-weight: bold;
+		font-weight: normal;
+		font-family: @font-family-theme-bold;
 		font-size: 38px;
 		margin-bottom: 10px;
   	}
