--- a/src/main/webapp/bundles/health_v2/less/productPolicySummary.less
+++ b/src/main/webapp/bundles/health_v2/less/productPolicySummary.less
@@ -263,6 +263,9 @@
     padding: 5px;
   }
   @media (@sm) {
+    &.formMode .price {
+      padding-top: 7px;
+    }
     &:not(.formMode) {
       margin-bottom: 20px;
       margin-top: -52px;
